--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <body>
   <div class="wrapper">
     <div class="img-box">
-      <a id="qr-img"></a>
+      <a id="qr-img" alt="QR code links to FrontEndMentor site"></a>
     </div>
 
     <div class="bold-text flex-item">
-      <p>Improve your front-end skills by building projects
-      </p>
+      <h2>Improve your front-end skills by building projects
+      </h2>
     </div>
     <div class="plain-text flex-item">
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </p>
+      <h4>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </h4>
     </div>
   </div>
 
